--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="fantasy">
     <head>
         <meta charset="UTF-8">
         <title>Help Desk</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div  id="root"></div>
     </body>
+    <script src="dist/bundle.js"></script>
 </html>
