--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Help Desk</title>
     </head>
     <body>
+        HELLO
         <div  id="root"></div>
     </body>
-    <script src="dist/bundle.js"></script>
 </html>
